# restaurant_management_app

./: .gitignore  cookies.txt  docker-compose.yml  package-lock.json  pyrightconfig.json
backend/: .python-version  Dockerfile  pyproject.toml  requirements.txt
backend/accounts/: models.py  shit.html  shit2.html  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_diner_email.py  0003_diner_hashed_password_staff_email_and_more.py
backend/accounts/tests/: test_accounts_models.py  test_accounts_views.py  test_models.py  test_views.py
backend/analytics/: tests.py  views.py
backend/analytics/management/commands/: seed_db.py
backend/config/: settings.py  urls.py
backend/menu/: models.py  serializers.py  views.py
backend/menu/migrations/: 0001_initial.py  0002_alter_menu_description.py
backend/menu/tests/: test_menu_api.py  test_menuitem_api.py
backend/orders/: models.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_alter_order_total_price.py  0003_alter_order_time_created.py  0004_alter_payment_time_created.py
backend/orders/tests/: test_orders_views.py
backend/reviews/: models.py  views.py
backend/reviews/migrations/: 0001_initial.py  0002_alter_feedback_order.py  0003_alter_feedback_time_created.py
frontend/: Dockerfile  README.md  index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend-old/: Dockerfile  package-lock.json
frontend-old/src/: App.js  index.js
frontend-old/src/components/: Home.js  Menu.js  Navbar.css  (+2 more)
frontend/src/: App.js
(+46 files in other folders)
