[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.7",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.15.2",
    "pillow==11.1.0",
    "psycopg2-binary==2.9.10",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "sqlparse==0.5.3",
]
